k8s-cluster-config/platform/routes/httproute.argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: production
      sectionName: argocd
  hostnames:
    - argocd.akmalmaulana.net
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
