k8s-cluster-config/platform/routes/httproute.headlamp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: kube-system
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: production
      sectionName: headlamp
  hostnames:
    - headlamp.akmalmaulana.net
  rules:
    - backendRefs:
        - name: my-headlamp
          port: 80
