k8s-cluster-config/platform/routes/httproute.prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: production
      sectionName: prometheus
  hostnames:
    - prometheus.akmalmaulana.net
  rules:
    - backendRefs:
        - name: prometheus-service
          port: 8080
