k8s-cluster-config/platform/routes/httproute.rancher.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: production
      sectionName: rancher
  hostnames:
    - rancher.akmalmaulana.net
  rules:
    - backendRefs:
        - name: rancher
          port: 80
